fix shift

--- a/css/main.css
+++ b/css/main.css
@@ -52,11 +52,12 @@ blockquote {
 }
 
 
-.main a img {
+.main img {
     max-width: 100%;
     height: auto;
     max-height: 50vh;
 }
+
 
 .post img {
     border-radius: 10px;
